# ollama

./: .copilot-instructions  .env.example  .env.production  .gitignore  =0.0.18  =0.47.2  =43.0.1  ACTIVATION_AND_ROLLOUT.md  ADOPTION_ROADMAP.md  APPROVAL_AND_CLOSURE_SUMMARY.md  APPROVAL_AND_COMPLETION_FINAL.md  AUDIT_DOCUMENTATION_INDEX.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_QUICK_REFERENCE.md  AUDIT_STATUS_REPORT.md  AUTONOMOUS_ISSUE_FRAMEWORK.md  BRANCH_GOVERNANCE.md  CHANGELOG.md  CLAUDE_REPLACEMENT_ROADMAP.md  COMPLIANCE_STATUS.md  CONTRIBUTING.md  DELIVERABLES_MANIFEST.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_ANALYSIS_COMPLETION_REPORT.md  DEPLOYMENT_AUTHORIZATION.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_STATUS_JAN14.md  DEVELOPER_QUICK_REFERENCE.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_INDEX.md  ELITE_STANDARDS_COMPLETE.md  ELITE_STANDARDS_QUICK_REFERENCE.md  EXECUTION_COMPLETE.md  FAANG_BRUTALITY_AUDIT_JAN14_2025.md  FAANG_IMPLEMENTATION_COMPLETE.md  FINAL_ACTION_PLAN.md  FINAL_APPROVAL_AND_DEPLOYMENT_AUTHORIZATION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_PMO_MIGRATION_STATUS.md  FINAL_PROJECT_COMPLETION_SUMMARY.md  (+80 more)
.githooks/: commit-msg-validate  pre-commit  pre-commit-elite
.github/: BRANCH-PROTECTION.md  CODE-REVIEW-CHECKLIST.md  FAANG-ELITE-STANDARDS.md  FOLDER-STRUCTURE-STANDARDS.md  IMPLEMENTATION-SUMMARY.md  MASTER-INDEX.md  OLLAMA_INTEGRATION_GUIDE.md  OLLAMA_QUICK_START.md  OLLAMA_SPEED_ANALYSIS.md  QUICK-REFERENCE.md  TEAM-ONBOARDING.md  TRIAGE_COMPLETION_REPORT.md  agent_autonomous_dispatch.json  agent_execution_progress.json  agent_ready_queue.json  agent_ready_shards.json  autonomous_execution_batches.json  autonomous_issue_execution_plan.json  copilot-instructions.md  issue-orchestrator.iac.json  issue_ops_ledger.jsonl  live_triage_manifest.json  next_wave_execution_queue.json  non_p0_execution_queue.json  ollama_classification_report.json  open_issues_snapshot.json  orchestrator_report_autonomous.json  wave_assignment_deferred_queue.json
.husky/: pre-commit
config/: .env.example  production.yaml
cost/: __init__.py  collector.py  service.py
docker/: Dockerfile  docker-compose.elite.yml  docker-compose.minimal.yml  docker-compose.prod.yml
docs/: ADR-PROCESS.md  ADR.md  CDN_IMPLEMENTATION.md  CHANGELOG.md  CHAOS_ENGINEERING_IMPLEMENTATION.md  CI.md  CI_CD_AUTOMATION_QUICK_REFERENCE.md  CI_CD_AUTOMATION_SUMMARY.md  COMPLETE_DOCUMENTATION_INDEX.md  COMPLETION_SUMMARY.md  COMPLIANCE_AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_DOCUMENTATION_INDEX.md  (+37 more)
(+497 files in other folders)
